adding RabbitMQ async